# Sleep-Time

./: pyproject.toml  second_json.json  time_sleeping.json
app/: __main__.py  config.py  servis.py  sleep.py  time_sleeping.json
random_progress/: __main__.py  config.py  main.py  schemas.py  services.py  sleep.py  validators.py
tests/: test_validators.py
