[tool.poetry]
name = "pythonprojectefromvlad"
version = "0.1.0"
description = ""
authors = ["Mike Sobolev <gemex18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
dotenv = "^0.0.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
